--- a/docs/examples/1.example-quickstart.ipynb
+++ b/docs/examples/1.example-quickstart.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,26 +63,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "from rag_citation import CiteItem, Inference\n",
     "\n",
-    "inference = Inference(spacy_model=\"sm\", embedding_model=\"md\")\n",
+    "inference = Inference(spacy_model=\"md\", embedding_model=\"md\")\n",
     "cite_item = CiteItem(answer=answer, context=context)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:00<00:00,  1.13it/s]\n"
+      "100%|██████████| 1/1 [00:00<00:00,  2.25it/s]\n"
      ]
     }
    ],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -100,14 +100,15 @@
       "text/plain": [
        "[{'answer_sentences': \"Elon Musk's net worth is estimated to be US$241 billion as of August 2024.\",\n",
        "  'cite_document': [{'document': 'people in the world; as of August 2024[update], Forbes estimates his net worth to be US$241 billion.[3]',\n",
-       "    'source_id': 'b0ee3785-f6e1-4af0-81ea-4db8cf096217',\n",
+       "    'source_id': '4f3722cd-becb-44b2-9f9a-bde240e17198',\n",
        "    'entity': [{'word': 'August 2024', 'entity_name': 'DATE'},\n",
        "     {'word': 'US$241 billion', 'entity_name': 'MONEY'}],\n",
+       "    'score': 100,\n",
        "    'meta': [{'url': 'https://en.wikipedia.org/wiki/Elon_Musk',\n",
        "      'chunk_id': '1eab8dd1ffa92906f7fc839862871ca5'}]}]}]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +128,7 @@
        "[]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +148,7 @@
        "False"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +188,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
