--- a/docs/examples/3.example-langchain.ipynb
+++ b/docs/examples/3.example-langchain.ipynb
@@ -164,8 +164,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/anaconda3/envs/py3.11/lib/python3.11/site-packages/langchain_core/_api/deprecation.py:139: LangChainDeprecationWarning: The class `ChatOpenAI` was deprecated in LangChain 0.0.10 and will be removed in 0.3.0. An updated version of the class exists in the langchain-openai package and should be used instead. To use it run `pip install -U langchain-openai` and import as `from langchain_openai import ChatOpenAI`.\n",
-      "  warn_deprecated(\n"
+      "/var/folders/cy/gj8_5qln4hv5mw868mz0cdq80000gn/T/ipykernel_54273/3358216292.py:4: LangChainDeprecationWarning: The class `ChatOpenAI` was deprecated in LangChain 0.0.10 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-openai package and should be used instead. To use it run `pip install -U :class:`~langchain-openai` and import as `from :class:`~langchain_openai import ChatOpenAI``.\n",
+      "  llm = ChatOpenAI(model=\"gpt-4o-mini\")\n"
      ]
     }
    ],
@@ -180,7 +180,16 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/py3.12/lib/python3.12/site-packages/langsmith/client.py:354: LangSmithMissingAPIKeyWarning: API key must be provided when using hosted LangSmith API\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain import hub\n",
     "prompt = hub.pull(\"empler-ai/rag-prompt\")"
@@ -266,31 +275,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "from rag_citation import CiteItem, Inference\n",
     "\n",
-    "inference = Inference(spacy_model=\"md\", embedding_model=\"md\")\n",
+    "inference = Inference(spacy_model=\"sm\", embedding_model=\"md\")\n",
     "cite_item = CiteItem(answer=answer, context=context)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 4/4 [00:02<00:00,  1.80it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "output=inference(cite_item)"
    ]
   },
   {
@@ -299,24 +291,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[{'answer_sentences': 'It took Apple 10 years to grow from a garage operation to a $2 billion company.',\n",
-       "  'cite_document': [{'document': 'We worked hard, and in 10 years Apple had grown from just the two of us in a garage into a $2 billion company with over 4,000 employees.',\n",
-       "    'source_id': '65940ca0-a470-400c-bf57-2264b7c6427a',\n",
-       "    'entity': [{'word': 'Apple', 'entity_name': 'ORG'},\n",
-       "     {'word': '10 years', 'entity_name': 'DATE'},\n",
-       "     {'word': '$2 billion', 'entity_name': 'MONEY'}],\n",
-       "    'meta': []}]}]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 4/4 [00:03<00:00,  1.16it/s]\n"
+     ]
     }
    ],
    "source": [
-    "output.citation"
+    "output=inference(cite_item)"
    ]
   },
   {
@@ -327,7 +310,14 @@
     {
      "data": {
       "text/plain": [
-       "[]"
+       "[{'answer_sentences': 'It took Apple 10 years to grow from a garage operation to a $2 billion company.',\n",
+       "  'cite_document': [{'document': 'We worked hard, and in 10 years Apple had grown from just the two of us in a garage into a $2 billion company with over 4,000 employees.',\n",
+       "    'source_id': 'd375a7cb-21cb-4e24-8c2b-f7175d3f5579',\n",
+       "    'entity': [{'word': 'Apple', 'entity_name': 'ORG'},\n",
+       "     {'word': '10 years', 'entity_name': 'DATE'},\n",
+       "     {'word': '$2 billion', 'entity_name': 'MONEY'}],\n",
+       "    'score': 0.9315851926803589,\n",
+       "    'meta': []}]}]"
       ]
      },
      "execution_count": 18,
@@ -336,7 +326,7 @@
     }
    ],
    "source": [
-    "output.missing_word"
+    "output.citation"
    ]
   },
   {
@@ -347,10 +337,30 @@
     {
      "data": {
       "text/plain": [
-       "False"
+       "[]"
       ]
      },
      "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output.missing_word"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +393,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py3.11",
+   "display_name": "py3.12",
    "language": "python",
    "name": "python3"
   },
@@ -397,7 +407,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
